[tool.poetry]
name = "programming-assignment"
version = "0.1.0"
description = ""
authors = ["Alex The JPEG <alexthejpeg@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
